--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,12 @@ ol {
   margin: 0;
 }
 
+.header {
+  @e padding: 24px 0 25px;
+}
+.header__span--studio {
+  color: #212121;
+}
 .header .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -59,20 +65,11 @@ ol {
           justify-content: space-between;
 }
 
-.header {
-  padding: 24px 0 25px;
-  border-bottom: 1px solid #ececec;
-}
-
-.header__logo {
+.logo {
   color: #2196f3;
   font-family: "Raleway", sans-serif;
-  font-size: 26px;
   font-weight: 700;
-}
-
-.header__span {
-  color: #212121;
+  font-size: 26px;
 }
 
 .nav-list {
@@ -84,18 +81,18 @@ ol {
           align-items: center;
   gap: 50px;
 }
-
 .nav-list__item {
   position: relative;
 }
-
 .nav-list__link {
   color: #212121;
   font-weight: 500;
   -webkit-transition: 220ms cubic-bezier(0.6, 0, 0.4, 1);
   transition: 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
-
+.nav-list__link:hover {
+  color: #2196f3;
+}
 .nav-list__link::after {
   content: "";
   background-color: #2196f3;
@@ -108,37 +105,41 @@ ol {
   -webkit-transition: width 220ms cubic-bezier(0.6, 0, 0.4, 1);
   transition: width 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
-
 .nav-list__link:hover::after {
   width: 100%;
 }
 
-.nav-list__link:hover {
-  color: #2196f3;
-}
-
-.contact-list {
+.contact {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 50px;
+  gap: 49px;
 }
-
-.contact-social__link {
+.contact__link {
   color: #757575;
   font-weight: 500;
 }
-
-.contact-social__link:hover {
+.contact__link:hover svg {
+  fill: #2196f3;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact__link:hover {
   color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.contact-email__icon,
-.contact-tel__icon {
+.contact__icon {
   fill: #757575;
   margin-right: 11px;
+}
+.contact__icon--email {
+  width: 16px;
+  height: 12px;
+}
+.contact__icon--phone {
+  width: 16px;
+  height: 12px;
 }
 
 .contact-email:hover svg,
@@ -157,7 +158,6 @@ ol {
   background-size: cover;
   background-position: center;
 }
-
 .hero__title {
   color: #fff;
   text-align: center;
@@ -166,6 +166,13 @@ ol {
   line-height: 1.4;
   text-transform: uppercase;
   margin-bottom: 30px;
+}
+.hero__btn {
+  margin: 0 auto;
+}
+.hero__btn:hover {
+  -webkit-animation: scale 1s ease infinite alternate;
+          animation: scale 1s ease infinite alternate;
 }
 
 .button {
@@ -178,15 +185,11 @@ ol {
   background-color: #2196f3;
   border: none;
   border-radius: 4px;
-  margin: 0 auto;
   display: block;
   -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-
 .button:hover {
-  -webkit-animation: scale 1s ease infinite alternate;
-          animation: scale 1s ease infinite alternate;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -212,11 +215,6 @@ ol {
             transform: scale(1.1);
   }
 }
-.hero-btn__submit {
-  width: 200px;
-  margin-top: 30px;
-}
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -256,8 +254,14 @@ ol {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal__title {
+  color: #212121;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 16px;
+}
 
-.modal-form__list {
+.modal-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -268,25 +272,15 @@ ol {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
-.modal__item {
+.modal-list__item {
   position: relative;
   width: 448px;
 }
-
-.modal__title {
-  color: #212121;
-  font-size: 20px;
-  text-align: center;
-  margin-bottom: 16px;
-}
-
-.modal__label {
+.modal-list__label {
   color: #757575;
   font-size: 12px;
 }
-
-.modal__input {
+.modal-list__input {
   width: 448px;
   height: 40px;
   padding-left: 40px;
@@ -294,15 +288,17 @@ ol {
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   cursor: pointer;
-}
-
-.modal__input {
   outline: #2196f3;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal__icon {
+.modal-list__input:hover, .modal-list__input:hover + .modal-list__input {
+  border-color: #2196f3;
+  fill: #2196f3;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-list__icon {
   position: absolute;
   top: 37px;
   left: 14px;
@@ -311,16 +307,7 @@ ol {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal__input:hover,
-.modal__input:hover + .modal__icon {
-  border-color: #2196f3;
-  fill: #2196f3;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal__com {
+.modal-list__comment {
   margin: 6px 0 10px;
   padding: 11px;
   width: 448px;
@@ -330,16 +317,14 @@ ol {
   resize: none;
   cursor: text;
 }
-
-.modal__com:hover,
-.modal__com:focus {
+.modal-list__comment:hover, .modal-list__comment:focus {
   border-color: #2196f3;
   outline-color: #2196f3;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__box {
+.modal__box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -368,7 +353,6 @@ ol {
           appearance: none;
   cursor: pointer;
 }
-
 .modal__checkbox:checked::after {
   content: "";
   display: -webkit-box;
@@ -397,7 +381,12 @@ ol {
   color: #2196f3;
 }
 
-.modal-btn__close {
+.modal__btn-submit {
+  width: 200px;
+  margin: 30px auto 0;
+}
+
+.modal__btn-close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -407,12 +396,12 @@ ol {
   background-color: #fff;
 }
 
-.modal-icon__close {
+.modal__icon-close {
   width: 11px;
   height: 11px;
 }
 
-.modal-icon__close:hover {
+.modal__icon-close:hover {
   fill: #2196f3;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -429,7 +418,9 @@ ol {
   display: flex;
   gap: 30px;
 }
-
+.features-list__item {
+  max-width: 270px;
+}
 .features-list__item::before {
   content: "";
   display: block;
@@ -441,35 +432,25 @@ ol {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-
 .features-list__item:first-child::before {
   background-image: url("../images/features/antenna.svg");
 }
-
 .features-list__item:nth-child(2)::before {
   background-image: url("../images/features/clock.svg");
 }
-
 .features-list__item:nth-child(3)::before {
   background-image: url("../images/features/diagram.svg");
 }
-
 .features-list__item:last-child::before {
   background-image: url("../images/features/astronaut.svg");
 }
-
-.features-list__item {
-  max-width: 270px;
-}
-
-.features__title {
+.features-list__title {
   color: #212121;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
-
-.features__text {
+.features-list__text {
   color: #757575;
   line-height: 1.7;
 }
@@ -477,7 +458,6 @@ ol {
 .work {
   padding-bottom: 94px;
 }
-
 .work__title {
   color: #212121;
   text-align: center;
@@ -486,16 +466,20 @@ ol {
   margin-bottom: 50px;
 }
 
+.work-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
 .work-list__item {
   position: relative;
 }
-
-.work__img {
+.work-list__img {
   width: 370px;
   height: 294px;
 }
-
-.work__text {
+.work-list__text {
   width: 100%;
   font-weight: 700;
   font-size: 14px;
@@ -509,19 +493,11 @@ ol {
   bottom: 3px;
 }
 
-.work-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-}
-
 .team {
   background: #f5f4fa;
   padding-bottom: 94px;
   padding-top: 94px;
 }
-
 .team__title {
   color: #212121;
   text-align: center;
@@ -530,91 +506,78 @@ ol {
   margin-bottom: 50px;
 }
 
-.team-list__item {
-  padding-bottom: 30px;
-}
-
-.team__info {
-  width: 270px;
-  height: 428px;
-  border-radius: 0px 0px 4px 4px;
-  background: #fff;
-  -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-}
-
-.team__img {
-  width: 270px;
-  height: 260px;
-}
-
-.team__name {
-  color: #212121;
-  text-align: center;
-  font-weight: 500;
-  margin: 30px 0 10px;
-}
-
-.team__prof {
-  color: #757575;
-  text-align: center;
-}
-
 .team-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 30px;
 }
+.team-list__item {
+  padding-bottom: 30px;
+}
+.team-list__info {
+  width: 270px;
+  height: 428px;
+  border-radius: 0px 0px 4px 4px;
+  background: #fff;
+}
+.team-list__info:hover {
+  -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+.team-list__img {
+  width: 270px;
+  height: 260px;
+}
+.team-list__name {
+  color: #212121;
+  text-align: center;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+.team-list__prof {
+  color: #757575;
+  text-align: center;
+}
 
-.team-social {
+.networks-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 10px;
   margin-top: 20px;
 }
-
-.team-social__item {
+.networks-list__item {
   padding: 12px;
   border-radius: 22px;
   cursor: pointer;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.team-social__item:hover {
+.networks-list__item:hover {
   background-color: #2196f3;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.team-social__item:hover svg {
+.networks-list__item:hover svg {
   fill: #fff;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.team-social__icon {
+.networks-list__icon {
   fill: #afb1b8;
   width: 20px;
   height: 20px;
 }
-
-.team-social__icon:hover {
+.networks-list__icon:hover {
   fill: #fff;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .brands {
   padding: 95px 0;
 }
-
 .brands__title {
   font-weight: 700;
   font-size: 36px;
@@ -624,7 +587,7 @@ ol {
   margin-bottom: 59px;
 }
 
-.brands__list {
+.brands-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -635,7 +598,6 @@ ol {
       -ms-flex-align: center;
           align-items: center;
 }
-
 .brands-list__item {
   width: 170px;
   height: 92px;
@@ -643,22 +605,19 @@ ol {
   border-radius: 4px;
   padding: 17px 30px;
 }
-
 .brands-list__item:hover {
   border-color: #2196f3;
   cursor: pointer;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .brands-list__item:hover svg {
   fill: #2196f3;
   cursor: pointer;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.brands__icon {
+.brands-list__icon {
   width: 106px;
   height: 60px;
   fill: #afb1b8;
@@ -668,7 +627,6 @@ ol {
   background-color: #2f303a;
   padding: 60px 0;
 }
-
 .footer .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -679,7 +637,7 @@ ol {
   gap: 70px;
 }
 
-.footer-pages__left {
+.footer-contacts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -689,35 +647,11 @@ ol {
           flex-direction: column;
   padding-top: 16px;
 }
-
-.footer__logo {
-  color: #2196f3;
-  font-family: "Raleway", sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  display: block;
+.footer-contacts__logo {
   margin-bottom: 20px;
 }
-
-.footer__span {
-  color: #2196f3;
-}
-
-.footer__address {
-  color: #2196f3;
-  line-height: 1.7;
-}
-
-.footer__mail {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
-  line-height: 1.7;
-}
-
-.footer__tel {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
-  line-height: 1.7;
+.footer-contacts__logo--studio {
+  color: #fff;
 }
 
 .address {
@@ -730,8 +664,17 @@ ol {
           flex-direction: column;
   gap: 9px;
 }
+.address__city {
+  color: #fff;
+  line-height: 1.7;
+}
+.address__contact {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.7;
+}
 
-.footer-pages__title {
+.footer-social__title {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.03em;
@@ -740,41 +683,53 @@ ol {
   margin-bottom: 20px;
 }
 
-.footer-social__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-}
-
-.footer-social__item {
+.networks-list__item {
   display: inline-block;
   padding: 12px;
   border-radius: 22px;
   background-color: rgba(255, 255, 255, 0.1);
-}
-
-.footer-social__item:hover {
-  background-color: #2196f3;
-  cursor: pointer;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.footer__icon {
+.networks-list__item:hover {
+  background-color: #2196f3;
+  cursor: pointer;
+}
+.networks-list__icon--footer {
   fill: #fff;
   width: 20px;
   height: 20px;
 }
 
-.footer__form {
+.footer-subscribe {
+  position: relative;
+  left: 0;
+  top: 5px;
+}
+
+.footer-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   gap: 12px;
 }
-
-.footer__input {
+.footer-form__label {
+  font-weight: 700;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  text-transform: uppercase;
+}
+.footer-form__input {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   width: 358px;
@@ -783,30 +738,29 @@ ol {
           box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: rgba(33, 150, 243, 0);
   padding: 13px 15px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
-}
-
-.footer__btn {
-  border-radius: 4px;
-  -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-          box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: #2196f3;
-  width: 200px;
-  height: 50px;
-  border: none;
   font-size: 16px;
-  line-height: 1.87;
-  text-align: center;
-  color: #fff;
 }
-
+.footer-form__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  padding: 10px 30px;
+  background-color: #2196f3;
+  display: block;
+  margin: 0 auto;
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
 .footer-form__icon {
-  position: relative;
-  left: 6px;
-  top: 3px;
-  width: 24px;
-  height: 24px;
+  width: 21px;
+  height: 21px;
+  fill: #fff;
 }/*# sourceMappingURL=styles.css.map */
