--- a/sass/components/_brands.scss
+++ b/sass/components/_brands.scss
@@ -1,7 +1,6 @@
 .brands {
   padding: 95px 0;
-}
-.brands__title {
+  &__title {
   font-weight: 700;
   font-size: 36px;
   letter-spacing: 0.03em;
@@ -9,30 +8,37 @@
   color: getColor("black");
   margin-bottom: 59px;
 }
-.brands__list {
+
+}
+
+.brands-list {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.brands-list__item {
+  &__item {
   width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   padding: 17px 30px;
-}
-.brands-list__item:hover {
+  &:hover {
   border-color: getColor("hover");
   cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.brands-list__item:hover svg {
+&:hover svg {
   fill: getColor("hover");
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.brands__icon {
+}
+&__icon {
   width: 106px;
   height: 60px;
   fill: #afb1b8;
 }
+}
+
+
+
+
