--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,52 +1,40 @@
 .footer {
   background-color: #2f303a;
   padding: 60px 0;
-}
-
-.footer .container {
+  & .container {
   display: flex;
   align-items: center;
   gap: 70px;
 }
+}
 
-.footer-pages__left {
+.footer-contacts {
   display: flex;
   flex-direction: column;
   padding-top: 16px;
-}
-
-.footer__logo {
-  color: getColor("hover");
-  font-family: "Raleway", sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  display: block;
-  margin-bottom: 20px;
-}
-.footer__span {
-  color: getColor("hover");
-}
-.footer__address {
-  color: getColor("hover");
-  line-height: 1.7;
-}
-.footer__mail {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
-  line-height: 1.7;
-}
-.footer__tel {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
-  line-height: 1.7;
+  &__logo {
+    margin-bottom: 20px;
+  }
+  &__logo--studio {
+    color: getColor("white");
+  }
 }
 .address {
   display: flex;
   flex-direction: column;
   gap: 9px;
+  &__city {
+    color: getColor("white");
+    line-height: 1.7;
+  }
+  &__contact {
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 
-.footer-pages__title {
+.footer-social__title {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.03em;
@@ -54,65 +42,75 @@
   color: #fff;
   margin-bottom: 20px;
 }
-.footer-social__list {
-  display: flex;
-  gap: 10px;
-}
-.footer-social__item {
-  display: inline-block;
-  padding: 12px;
-  border-radius: 22px;
-  background-color: rgba(255, 255, 255, 0.1);
-}
-.footer-social__item:hover {
-  background-color: getColor("hover");
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
-.footer__icon {
-  fill: #fff;
-  width: 20px;
-  height: 20px;
+.networks-list {
+  &__item {
+    display: inline-block;
+    padding: 12px;
+    border-radius: 22px;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover {
+      background-color: getColor("hover");
+      cursor: pointer;
+    }
+  }
+  &__icon--footer {
+    fill: getColor("white");
+    width: 20px;
+    height: 20px;
+  }
 }
 
-.footer__form {
-  display: flex;
-  gap: 12px;
-}
-
-.footer__input {
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  width: 358px;
-  height: 50px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: rgba(33, 150, 243, 0);
-  padding: 13px 15px;
-
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer__btn {
-  border-radius: 4px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: getColor("hover");
-  width: 200px;
-  height: 50px;
-  border: none;
-
-  font-size: 16px;
-  line-height: 1.87;
-  text-align: center;
-  color: getColor("white");
-}
-
-.footer-form__icon {
+.footer-subscribe {
   position: relative;
-  left: 6px;
-  top: 3px;
-  width: 24px;
-  height: 24px;
+  left: 0;
+  top: 5px;
 }
+.footer-form {
+  display: flex;
+  align-items: flex-end;
+  gap: 12px;
+  &__label {
+    font-weight: 700;
+    color: getColor("white");
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    text-transform: uppercase;
+  }
+  &__input {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    width: 358px;
+    height: 50px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: rgba(33, 150, 243, 0);
+    padding: 13px 15px;
+
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 16px;;
+  }
+  &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 30px;
+    background-color: getColor("hover");
+    display: block;
+    margin: 0 auto;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  }
+  &__icon {
+    width: 21px;
+    height: 21px;
+    fill: getColor("white");
+  }
+}
+
+
+
+
+
+
