--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,8 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-}
-.hero__title {
+  &__title {
   color: getColor("white");
   text-align: center;
   font-size: 44px;
@@ -20,6 +19,14 @@
   text-transform: uppercase;
   margin-bottom: 30px;
 }
+ &__btn {
+  margin: 0 auto;
+  &:hover {
+    animation: scale 1s ease infinite alternate; 
+  }
+  }
+}
+
 .button {
   color: getColor("white");
   font-size: 16px;
@@ -31,14 +38,11 @@
   background-color: getColor("hover");
   border: none;
   border-radius: 4px;
-  margin: 0 auto;
   display: block;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-}
-
-.button:hover {
-  animation: scale 1s ease infinite alternate;
+  &:hover {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 }
 
 @keyframes scale {
@@ -48,9 +52,4 @@
   100% {
     transform: scale(1.1);
   }
-}
-
-.hero-btn__submit {
-  width: 200px;
-  margin-top: 30px;
 }
