--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,32 +31,28 @@
   background-color: getColor("white");
   transform: translate(-50%, -50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__list {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
-.modal__item {
-  position: relative;
-  width: 448px;
-}
-
-.modal__title {
+  &__title {
   color: #212121;
   font-size: 20px;
   text-align: center;
   margin-bottom: 16px;
 }
+}
 
-.modal__label {
+.modal-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  &__item {
+  position: relative;
+  width: 448px;
+}
+
+&__label {
   color: getColor("gray");
   font-size: 12px;
 }
-
-.modal__input {
+&__input {
   width: 448px;
   height: 40px;
   padding-left: 40px;
@@ -64,14 +60,18 @@
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   cursor: pointer;
-}
-
-.modal__input {
-  outline: getColor("hover");
+   outline: getColor("hover");
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:hover + & {
+  border-color: getColor("hover");
+  fill: getColor("hover");
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 }
 
-.modal__icon {
+&__icon {
   position: absolute;
   top: 37px;
   left: 14px;
@@ -79,16 +79,7 @@
   height: 13px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal__input:hover,
-.modal__input:hover + .modal__icon {
-  border-color: getColor("hover");
-  fill: getColor("hover");
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal__com {
+&__comment {
   margin: 6px 0 10px;
   padding: 11px;
   width: 448px;
@@ -97,17 +88,17 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   resize: none;
   cursor: text;
-}
-
-.modal__com:hover,
-.modal__com:focus {
+  &:hover,
+  &:focus {
   border-color: getColor("hover");
   outline-color: getColor("hover");
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+}
+}
 
-.modal-form__box {
+.modal__box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -127,9 +118,7 @@
   outline: 2px solid #212121;
   appearance: none;
   cursor: pointer;
-}
-
-.modal__checkbox:checked::after {
+  &:checked::after {
   content: "";
   display: flex;
   justify-content: center;
@@ -145,13 +134,19 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+}
 
 .modal__link {
   text-decoration: underline;
   color: getColor("hover");
 }
 
-.modal-btn__close {
+.modal__btn-submit {
+  width: 200px;
+  margin: 30px auto 0;
+}
+
+.modal__btn-close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -161,12 +156,12 @@
   background-color: getColor("white");
 }
 
-.modal-icon__close {
+.modal__icon-close {
   width: 11px;
   height: 11px;
 }
 
-.modal-icon__close:hover {
+.modal__icon-close:hover {
   fill: getColor("hover");
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
