--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,70 +2,77 @@
   background: getColor("light");
   padding-bottom: 94px;
   padding-top: 94px;
-}
-.team__title {
+  &__title {
   color: getColor("black");
   text-align: center;
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 50px;
 }
-.team-list__item {
-  padding-bottom: 30px;
 }
-.team__info {
+
+.team-list {
+  display: flex;
+  gap: 30px;
+  &__item {
+  padding-bottom: 30px;
+ }
+ &__info {
   width: 270px;
   height: 428px;
   border-radius: 0px 0px 4px 4px;
   background: #fff;
-  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+  &:hover {
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  }
 }
-.team__img {
+&__img {
   width: 270px;
   height: 260px;
 }
-.team__name {
+&__name {
   color: getColor("black");
   text-align: center;
   font-weight: 500;
   margin: 30px 0 10px;
 }
-.team__prof {
+&__prof {
   color: getColor("gray");
   text-align: center;
 }
-.team-list {
-  display: flex;
-  gap: 30px;
 }
 
-.team-social {
+.networks-list {
   display: flex;
   justify-content: center;
-  gap: 10px;
   align-items: center;
+  gap: 10px;
   margin-top: 20px;
+  &__item {
+    padding: 12px;
+    border-radius: 22px;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover {
+      background-color: getColor("hover");
+    }
+    &:hover svg {
+      fill: getColor("white");
+    }
+  }
+  &__icon {
+    fill: #afb1b8;
+    width: 20px;
+    height: 20px;
+    &:hover {
+      fill: getColor("white");
+    }
+  }
 }
-.team-social__item {
-  padding: 12px;
-  border-radius: 22px;
-  cursor: pointer;
-}
-.team-social__item:hover {
-  background-color: getColor("hover");
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.team-social__item:hover svg {
-  fill: getColor("white");
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.team-social__icon {
-  fill: #afb1b8;
-  width: 20px;
-  height: 20px;
-}
-.team-social__icon:hover {
-  fill: getColor("white");
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
+
+
+
+
