--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -1,58 +1,59 @@
 .main {
   padding: 94px 0;
-}
-.main .container {
+  & .container {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 8px;
 }
+}
 .main-btn {
-  color: var(--web-studio-black);
+  color: getColor("black");
   text-align: center;
   line-height: 1.6;
-  background-color: var(--web-studio-white2);
+  background-color: getColor("light");
   border: none;
   border-radius: 4px;
   padding: 6px 25px;
-}
-.main-btn:hover {
-  color: var(--web-studio-white);
-  background-color: var(--web-studio-blue);
+  &:hover {
+  color: getColor("white");
+  background-color: getColor("hover");
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} 
 }
+
+
 .main-list {
   margin: 50px 0 0;
   display: flex;
   justify-content: space-between;
   row-gap: 30px;
   flex-wrap: wrap;
-}
-.main-list-item {
+  &__item {
   border: 1px solid #eee;
   flex-basis: calc((100% - 60px) / 3);
   cursor: pointer;
   position: relative;
   overflow: hidden;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.main-list-item:hover {
+  &:hover {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-img {
+}
+&__img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
-.list-title {
-  color: var(--web-studio-black);
+&__title {
+  color: getColor("black");
   font-size: 18px;
   font-weight: 700;
   line-height: 2;
@@ -60,12 +61,14 @@
   margin: 20px 0 4px;
   padding: 0 24px;
 }
-.list-text {
-  color: var(--web-studio-gray);
+&__text {
+  color: getColor("gray");
   font-weight: 400;
   line-height: 1.9;
   padding: 0 24px 20px;
 }
+}
+
 .thumb {
   position: relative;
   width: 370px;
@@ -81,18 +84,19 @@
 
   transform: translateY(100%);
   transition: transform 0.5s ease;
-}
-.overlay-box__text {
+  &__text {
   font-weight: 400;
   font-size: 18px;
   line-height: 156%;
-  color: #fff;
+  color: getColor("white");
   background-color: rgba(33, 150, 243, 0.9);
   padding: 62px 23px;
   width: 100%;
   height: 294px;
 }
-.main-list-item:hover .overlay-box {
+}
+
+.main-list__item:hover .overlay-box {
   transform: translateY(0);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
