--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,10 @@ ol {
 }
 
 .header {
-  @e padding: 24px 0 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 24px 0 25px;
 }
 .header__span--studio {
   color: #212121;
@@ -57,12 +60,12 @@ ol {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .logo {
