--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,15 @@
+.header .container, .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 body {
   color: #212121;
   font-family: "Roboto", sans-serif;
@@ -48,24 +60,15 @@ ol {
 }
 
 .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   padding: 24px 0 25px;
 }
 .header__span--studio {
   color: #212121;
 }
 .header .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .logo {
