--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -8,14 +8,22 @@ p,
 h1,
 h2,
 h3,
-h4,
-h5,
-h6 {
+p,
+ul,
+button {
+  padding: 0;
   margin: 0;
 }
 
-ul,
-ol {
-  padding-left: 0;
-  margin: 0;
+address {
+  font-style: normal;
+}
+
+img {
+  display: block;
+}
+
+button {
+  display: block;
+  border: none;
 }
