--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,48 +1,56 @@
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0;
+  @media (min-width: 1200px) {
+    padding: 94px 0;
+  }
 }
 .features-list {
-  display: flex;
+  @include flex(space-between, flex-start);
   gap: 30px;
+
   &__item {
-  max-width: 270px;
-  &::before {
-  content: "";
-  display: block;
-  height: 120px;
-  background-color: getColor("light");
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 4px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+    flex: 1 1 100%;
+    @media (min-width: 768px) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
+    @media (min-width: 1200px) {
+      flex-basis: calc((100% - 90px) / 4);
+    }
 
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 100%;
+      height: 120px;
+      background-color: getColor("blocks-bg");
+      background-repeat: no-repeat;
+      background-position: center;
+      border-radius: 4px;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+    &:first-child::before {
+      background-image: url("../images/features/antenna.svg");
+    }
+    &:nth-child(2)::before {
+      background-image: url("../images/features/clock.svg");
+    }
+    &:nth-child(3)::before {
+      background-image: url("../images/features/diagram.svg");
+    }
+    &:last-child::before {
+      background-image: url("../images/features/astronaut.svg");
+    }
+  }
+  &__title {
+    color: getColor("main-title");
+    @include text(14px, 700, $t-align:center, $transf:uppercase);
+    margin-bottom: 10px;
+    @media (min-width: 768px) {
+      text-align: left;
+    }
+  }
+  &__text {
+    @include text(14px, 400, 1.71);
+  }
 }
-&:first-child::before {
-  background-image: url("../images/features/antenna.svg");
-}
-&:nth-child(2)::before {
-  background-image: url("../images/features/clock.svg");
-}
-&:nth-child(3)::before {
-  background-image: url("../images/features/diagram.svg");
-}
-&:last-child::before {
-  background-image: url("../images/features/astronaut.svg");
-}
-}
-&__title {
-  color: getColor("black");
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-&__text {
-  color: getColor("gray");
-  line-height: 1.7;
-}
-}
-
-
-
