--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,55 +1,35 @@
 .hero {
-  background-color: #2f303a;
-  padding: 200px 0;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/hero.jpg);
+  background-color: getColor("black");
+  background-image: url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  &__overlay {
+    padding: 118px 0;
+    background-color: rgba(47, 48, 58, 0.4);
+
+    @media (min-width: 1200px) {
+      padding: 200px 0;
+    }
+  }
   &__title {
-  color: getColor("white");
-  text-align: center;
-  font-size: 44px;
-  font-weight: 900;
-  line-height: 1.4;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
- &__btn {
-  margin: 0 auto;
-  &:hover {
-    animation: scale 1s ease infinite alternate; 
-  }
-  }
-}
+    max-width: 360px;
+    color: getColor("white");
+    @include text(26px, 900, 1.36, 0.06em, center, uppercase);
+    margin: 0 auto 30px;
 
-.button {
-  color: getColor("white");
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.9;
-
-  width: 216px;
-  height: 50px;
-  background-color: getColor("hover");
-  border: none;
-  border-radius: 4px;
-  display: block;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  &:hover {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-}
-
-@keyframes scale {
-  0% {
-    transform: scale(1);
+    @media (min-width: 1200px) {
+      max-width: 696px;
+      font-size: 44px;
+    }
   }
-  100% {
-    transform: scale(1.1);
+  &__btn {
+    @include btn(200px);
+    @include text(16px, 700, 1.87, 0.06em, center);
+    margin: 0 auto;
+
+    @media (min-width: 1200px) {
+      @include btn(216px);
+    }
   }
 }
