--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,42 +1,51 @@
 .work {
-  padding-bottom: 94px;
+  display: none;
+
+  @media (min-width: 1200px) {
+    display: block;
+    padding-bottom: 94px;
+  }
+
   &__title {
-  color: getColor("black");
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  margin-bottom: 50px;
-}
+    @media (min-width: 1200px) {
+      color: getColor("main-title");
+      @include text(36px, 700, $t-align: center);
+      margin-bottom: 50px;
+    }
+  }
 }
 .work-list {
-  display: flex;
-  gap: 30px;
+  @media (min-width: 1200px) {
+    @include flex(space-between);
+  }
   &__item {
-  position: relative;
+    width: 370px;
+    height: 294px;
+    position: relative;
+
+    &::after {
+      content: "";
+      @include flex(center);
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 70px;
+      background-color: getColor("work-sub");
+      color: getColor("white");
+      @include text(14px, 700, normal, 0.03em, center, uppercase);
+    }
+    &:nth-child(1)::after {
+      content: "Десктопні додатки";
+    }
+    &:nth-child(2)::after {
+      content: "Мобільні додатки";
+    }
+    &:nth-child(3)::after {
+      content: "Дизайнерські рішення";
+    }
+  }
+
+  &__img {
+    @extend %image-bg;
+  }
 }
-&__img {
-  width: 370px;
-  height: 294px;
-}
-
-&__text {
-  width: 100%;
-  font-weight: 700;
-  font-size: 14px;
-  text-transform: uppercase;
-  text-align: center;
-  color: getColor("white");
-  background-color: rgba(47, 48, 58, 0.8);
-  padding: 27px;
-  letter-spacing: 0.03em;
-  position: absolute;
-  bottom: 3px;
-}
-}
-
-
-
-
-
-
-
