--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,10 +1,24 @@
 $colors: (
-  "hover": #2196f3,
-  "black": #212121,
+  "main-accent": #2196f3,
+  "main-title": #212121,
+  "main-text": #757575,
+  "blocks-bg": #f5f4fa,
+  "footer-bg": #2f303a,
+  "work-sub": #2f303ad8,
+  "svg-base": #afb1b8,
   "white": #fff,
-  "light": #f5f4fa,
-  "gray": #757575
+  "black": #000
 );
+
+$fonts: (
+  "Roboto": #{'"Roboto", sans-serif'},
+  "Raleway": #{'"Raleway", sans-serif'},
+);
+
 @function getColor($key) {
   @return map-get($colors, $key);
+}
+
+@function getFont($key) {
+  @return map-get($fonts, $key)
 }
